# corx

./: .gitignore  CMakeLists.txt  README.md  capture_parallel.sh  correlate.py  corx_file_format.h  corx_file_writer.cpp  corx_reader.py  flags.cfg  noise.sh  odroid.md  receiver.cpp  run.sh  settings.sh  sine_lookup.h  test.sh
cmake/Modules/: FindFastcard.cmake  FindVolk.cmake
experiments/: .gitignore  capture_parallel.sh  capture_parallel_corx.sh  capture_parallel_multicorx.sh  cmd.sh  corx_rx.sh  flags.cfg  ftp_upload_client.sh  ftp_upload_server.sh  multicorx_remote.sh  multicorx_server.sh  puppeteer.py  puppeteer.sh  run.sh  run_multicorx.sh  settings.sh  test.sh
experiments/correlate_server/: correlate_monitor.sh  correlate_server.py
experiments/old/: noise.sh  run_corx.sh  run_multicorx_ctrl.sh
experiments/sftp_upload_client/: check_stop.sh
experiments/sftp_upload_server/: authorized_keys  ssh_host_rsa_key  ssh_host_rsa_key.pub  upload_server.sh
experiments/upload_client/: id_rsa  upload.sh
experiments/upload_server/: server.sh  ssh_host_dsa_key  ssh_host_dsa_key.pub  sshd_config  stop.sh
src/: CMakeLists.txt  corx_file_writer.cpp  corx_file_writer.h  corx_reader.py  multicorx.py  multicorx_remote.py  receiver.cpp  receiver.h  sine_lookup.cpp  sine_lookup.h
src/cmake/Modules/: FindFastdet.cmake
transmitter/: PulseTX2.ino
